Fixed core number api
